# ipoptax

./: README.md  pyproject.toml
ipoptax/: linalg_helpers.py  solver.py
test/: simple_nlp.py  simple_qp.py
